# ghostflow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCS.md  Dockerfile  GHOSTLLM_INTEGRATION.md  README.md  TODO.md  docker-compose.yml
crates/ghostflow-api/: Cargo.toml
crates/ghostflow-api/src/: auth.rs  lib.rs  state.rs  websocket.rs
crates/ghostflow-api/src/routes/: flows.rs  mod.rs  nodes.rs
crates/ghostflow-cli/: Cargo.toml
crates/ghostflow-cli/src/: main.rs
crates/ghostflow-cli/src/examples/: simple_flow.rs
crates/ghostflow-core/: Cargo.toml
crates/ghostflow-core/src/: credentials.rs  error.rs  lib.rs  templates.rs  traits.rs
crates/ghostflow-engine/: Cargo.toml
crates/ghostflow-engine/src/: executor.rs  lib.rs  runtime.rs  scheduler.rs
crates/ghostflow-jarvis/: Cargo.toml
crates/ghostflow-jarvis/src/: lib.rs
crates/ghostflow-nodes/: Cargo.toml
crates/ghostflow-nodes/src/: control_flow.rs  ghostllm.rs  http.rs  lib.rs  ollama.rs  template.rs  webhook.rs
crates/ghostflow-nodes/src/integrations/: azure.rs  cloudflare.rs  database.rs  discord.rs  email.rs  gitlab.rs  google_sheets.rs  microsoft_graph.rs  mod.rs  proxmox.rs  slack.rs  wazuh.rs
crates/ghostflow-schema/: Cargo.toml
crates/ghostflow-schema/src/: execution.rs  flow.rs  lib.rs  node.rs
crates/ghostflow-server/: Cargo.toml
crates/ghostflow-server/src/: main.rs
crates/ghostflow-ui/: Cargo.toml
crates/ghostflow-ui/src/: lib.rs
crates/ghostflow-ui/src/pages/: credentials.rs  flow_editor.rs  flow_list.rs  home.rs  mod.rs
crates/ghostllm-sys/: Cargo.toml  build.rs
crates/ghostllm-sys/src/: ghostllm.h  ghostllm.zig  lib.rs
examples/: ghostllm_demo.rs
migrations/: 20250907000001_initial_schema.sql  20250907000002_seed_data.sql
scripts/: start.sh
testing/ghostllm-demo/: Cargo.toml
