[package]
name = "ghostflow-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ghostflow-schema = { path = "../ghostflow-schema" }
ghostflow-core = { path = "../ghostflow-core" }
ghostflow-engine = { path = "../ghostflow-engine" }
ghostflow-nodes = { path = "../ghostflow-nodes" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# WebSocket
tokio-tungstenite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# Database
sqlx.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"