[package]
name = "ghostflow-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ghostflow-schema = { path = "../ghostflow-schema" }
ghostflow-core = { path = "../ghostflow-core" }
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true