[package]
name = "ghostflow-jarvis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ghostflow-schema = { path = "../ghostflow-schema" }
ghostflow-core = { path = "../ghostflow-core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Process execution
tokio-process = "0.2"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true