[package]
name = "ghostflow-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ghostflow-schema = { path = "../ghostflow-schema" }
ghostflow-core = { path = "../ghostflow-core" }
ghostflow-engine = { path = "../ghostflow-engine" }
ghostflow-nodes = { path = "../ghostflow-nodes" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true