[package]
name = "ghostflow-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ghostflow-schema = { path = "../ghostflow-schema" }

# Leptos
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
leptos_axum = { workspace = true, optional = true }

# Web
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent"] }
js-sys = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_axum"]