[package]
name = "ghostllm-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for GhostLLM - GPU-accelerated AI inference"
authors = ["GhostFlow Contributors"]

[dependencies]
libc = "0.2"
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = ["gpu"]
gpu = []