[package]
name = "ghostllm-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghostllm-demo"
path = "src/main.rs"

[dependencies]
ghostflow-nodes = { path = "../../crates/ghostflow-nodes" }
ghostflow-core = { path = "../../crates/ghostflow-core" }
ghostflow-schema = { path = "../../crates/ghostflow-schema" }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"